# fatigue

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Changelog.md  CodeOfConduct.md  Contributing.md  Doxyfile  LLVMCoverage.cmake  README.md  fatigue-config.cmake  test_coverage.sh
.reuse/: dep5
docs/: Doxyfile  DoxygenLayout.xml  doxygen_colors.css  doxygen_custom.css
docs/doxinputs/: architecture.dox  development.dox  main.dox  tutorial.dox  user_api.dox
docs/doxinputs/architecture/: architecture_overview.drawio  test_check_sequence.drawio
docs/doxinputs/tutorial/: TrivialRunner.hpp
fatigue/: CMakeLists.txt  Checker.cpp  Checker.hpp  Config.cpp  Config.hpp  Logger.hpp  OstreamLogger.hpp  OstreamTestRunner.cpp  OstreamTestRunner.hpp  Runner.cpp  Runner.hpp  Suite.cpp  Suite.hpp  Test.hpp  TestDriver.cpp  TestDriver.hpp  TestLogger.hpp  TestRunner.hpp  VectorLogger.hpp  fatigue.cpp  fatigue.hpp  utils.hpp
fatigue/runners/: DefaultRunner.cpp  DefaultRunner.hpp
misc/: story.md
quality/: codechecker_skipfile.txt
tests/: CMakeCache.txt  CMakeLists.txt  manual_Fatigue.cpp  test_Config.cpp  test_OstreamTestLogger.cpp  test_OstreamTestLogger_noparam.cpp  test_OstreamTestRunner_noparam.cpp  test_TestDriver.cpp  test_Test_automsg_fail.cpp  test_Test_automsg_fail_showtypes.cpp  test_Test_automsg_pass.cpp  test_VectorLogger.cpp
tests/install/: CMakeLists.txt
tests/system/: CMakeLists.txt  compare.py  test_exclude_ostream.expected  test_fatigue.cpp  test_fatigue.expected  test_fatigue_cmdline.expected  test_fatigue_help_other_options.expected  test_fatigue_shownames_showtypes.expected  test_select_exclude_ostream.expected  test_select_ostream.expected
tests/tutorial/: CMakeLists.txt  test_tutorial_avg.expected  test_tutorial_ex.expected  test_tutorial_ex_werror_default.expected  test_tutorial_fixtures.expected  test_tutorial_specs.expected
tests/tutorial/extending/: TenTest.hpp  TrivialRunner.hpp  customOptions.hpp  fatigue_ex.hpp  main_ex.cpp
tests/tutorial/fixtures/: TestLoadedFixture.hpp  TestMemberFixture.hpp  TestSharedFixture.hpp  main_fixtures.cpp
tests/tutorial/quick_example/: SuiteAvg.hpp  TestAvgEmpty.hpp  TestAvgMany.hpp  TestAvgOne.hpp  avg.hpp  main_avg.cpp  main_avg_chaining.cpp
tests/tutorial/specifications/: Concat.hpp  ConcreteConcat.hpp  SpecsConcat.hpp  TestEmptyConcat.hpp  TestManyConcat.hpp  main_specs.cpp
tests/unit/: CMakeLists.txt  test_Config.cpp  test_Filter.cpp  test_OstreamTestLogger_noparam.cpp  test_OstreamTestRunner_exception.cpp  test_OstreamTestRunner_fatal.cpp  test_OstreamTestRunner_load_failure.cpp  test_OstreamTestRunner_noparam.cpp  test_OstreamTestRunner_passing.cpp  test_Test_automsg_fail.cpp  test_Test_automsg_fail_showtypes.cpp  test_Test_automsg_fail_showtypes_shownames.cpp  test_Test_automsg_pass.cpp
tests/unit/Checker/: CMakeLists.txt  Check_move_construction.cpp
tests/unit/Config/: CMakeLists.txt  Config.cpp  Filter.cpp
tests/unit/DefaultRunner/: CMakeLists.txt  DefaultLogger_noparam.cpp  DefaultLogger_noparam.cpp.rework  endRunOnFailure.cpp  endRunOnSuccess.cpp  exception.cpp  fatal.cpp  load_failure.cpp  modalities.cpp  names_and_types.cpp  noparam.cpp  passing.cpp
tests/unit/OstreamTestRunner/: CMakeLists.txt  OstreamTestLogger_noparam.cpp  exception.cpp  fatal.cpp  load_failure.cpp  noparam.cpp  passing.cpp
tests/unit/Test/: CMakeLists.txt  automsg_fail.cpp  automsg_fail_showtypes.cpp  automsg_fail_showtypes_shownames.cpp  automsg_pass.cpp
tests/unit/fatigue/: CMakeLists.txt  runner_not_found.cpp  unsupported_runner_option.cpp
tests/unit/utils/: CMakeLists.txt  demangle_gnu_fails.cpp  demangle_nongnu.cpp
tests/utils/: CMakeLists.txt  MockRunner.hpp  compare.py  compareStrings.hpp  test_assert.cpp  test_compareStrings.cpp  test_compare_py.cpp  test_compare_py.expected  test_compare_py_fail.expected
