
ADD_TEST_SUITE(ts_fatigue_unit)

add_subdirectory(Config)
add_subdirectory(OstreamTestRunner)
add_subdirectory(Test)

TEST_SUITE_IMPORT_BINARIES(ts_fatigue_unit ts_fatigue_unit_Config)
TEST_SUITE_IMPORT_BINARIES(ts_fatigue_unit ts_fatigue_unit_OstreamTestRunner)
TEST_SUITE_IMPORT_BINARIES(ts_fatigue_unit ts_fatigue_unit_Test)