
ADD_TEST_SUITE(ts_fatigue_unit)

add_subdirectory(Config)
add_subdirectory(DefaultRunner)
add_subdirectory(Test)
add_subdirectory(fatigue)

TEST_SUITE_IMPORT_BINARIES(ts_fatigue_unit ts_fatigue_unit_Config)
TEST_SUITE_IMPORT_BINARIES(ts_fatigue_unit ts_fatigue_unit_DefaultRunner)
TEST_SUITE_IMPORT_BINARIES(ts_fatigue_unit ts_fatigue_unit_Test)
TEST_SUITE_IMPORT_BINARIES(ts_fatigue_unit ts_fatigue_unit_fatigue)